Changelog for videoembed

videoembed - 1.2 Unreleased

    - fix ComponentLookupError import from zope.component [toutpt]

videoembed - 1.1 (2008-04-09)

    - added Brightcove support [Nate Aune]

videoembed - 1.1b1 (2008-02-14)

    - added partial ustream.tv support [Rocky Burt] r1672

    - added code to extract URL to FLV file from Youtube and Blip.tv (Ross Patterson) r1875 and r1879

videoembed - 1.0alpha1 (2007-04-29)

    - Initial public release.
      [Rocky Burt]

videoembed - 0.1 (unreleased)

    - Initial package structure.
      [zopeskel]
