@@ -7,6 +7,7 @@
   <include file="revver.zcml" />
   <include file="youtube.zcml" />
   <include file="ustreamtv.zcml" />
+  <include file="dailymotion.zcml" />
 
   <adapter
       name="vimeo"
